--- a/aboutus.html
+++ b/aboutus.html
@@ -26,7 +26,7 @@
 </head>
 
 <body>
-    
+
     <header>
         <div class="container">
             <div class="row">
@@ -42,8 +42,8 @@
     </header>
     <nav class="navbar navbar-expand-sm navbar-dark sticky-top">
         <div class="container">
-            <a class="navbar-brand" href="#"><img src="img/logo.png" width="30" height="30"></a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="nucampNavbar">
+            <a class="navbar-brand" href="index.html"><img src="img/logo.png" width="30" height="30"></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#nucampNavbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="nucampNavbar">
