--- a/index.html
+++ b/index.html
@@ -33,13 +33,19 @@
                     <h1>Nucamp</h1>
                     <h2>a better way to camp</h2>
                 </div>
+                <div class="col-md-4 col-xl-2 mt-4">
+                    <a href="#reserveForm">
+                        <button class="btn btn-info btn-large text-white text-nowrap">Reserve Campsite</button>
+                    </a>
+                </div>
             </div>
         </div>
+
     </header>
     <nav class="navbar navbar-expand-sm navbar-dark sticky-top">
         <div class="container">
             <a class="navbar-brand" href="#"><img src="img/logo.png" width="30" height="30"></a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="nucampNavbar">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#nucampNavbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="nucampNavbar">
@@ -74,9 +80,14 @@
                 <h2>Featured Campsites</h2>
             </div>
             <div class="col">
-                <h3>React Lake Campground</h3>
-                <p>Nestled in the foothills of the Chrome Mountains, this campground on the shores of the pristine React
-                    Lake is a favorite for fly fishers.</p>
+                <div class="d-flex flex-row-reverse">
+                    <img class="me-3 img-thumbnail " src="img/react-lake-thumb.jpg" alt="React Lake Campground" />
+                    <div class="align-self-center">
+                        <h3>React Lake Campground</h3>
+                        <p>Nestled in the foothills of the Chrome Mountains, this campground on the shores of the pristine React
+                            Lake is a favorite for fly fishers.</p>
+                    </div>
+                </div>
             </div>
         </div>
 
@@ -94,6 +105,44 @@
                 </div>
             </div>
         </div>
+
+        <div class="row row-content align align-items-center">
+            <div class="col-sm-9 col-lg-5 mx-auto">
+                <div class="card">
+                    <h3 class="card-header text-white bg-info">Reserve a Campsite</h3>
+                    <div class="card-body">
+                        <form id="reserveForm">
+                            <div class="row mb-3">
+                                <label class="col-sm-6 form-label">Number of Campers</label>
+                                <div class="col">
+                                    <select class="form-control" id="numCampers" name="numCampers">
+                                        <option>Select...</option>
+                                        <option>1</option>
+                                        <option>2</option>
+                                        <option>3</option>
+                                        <option>4</option>
+                                        <option>5</option>
+                                        <option>6</option>
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="row mb-3">
+                                <label class="col-sm-6 form-label" for="date">Date</label>
+                                <div class="col-sm-6">
+                                    <input class="form-control" type="date" id="date" name="date" placeholder="dd/mm/yyyy">
+                                </div>
+                            </div>
+                            <div class="row mb-3">
+                                <div class="col">
+                                    <button class="btn btn-primary" type="submit">Search</button>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </div>
     <footer class="site-footer">
         <div class="container">
