--- a/aboutus.html
+++ b/aboutus.html
@@ -105,6 +105,64 @@
         <div class="row row-content">
             <div class="col">
                 <h3>Community Partners</h3>
+
+                <div id="accordionExample" class="accordion">
+                    
+                    <div class="accordion-item">
+                        <h4 class="accordion-header">
+                            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#bootstrap">
+                                Bootstrap Outfitters
+                            </button>
+                        </h4>
+                        <div id="bootstrap" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
+                            <div class="accordion-body d-none d-sm-block">
+                                <p>Bootstrap Outfitters supplies you with the gear you need at prices you can't beat.</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="accordion-item">
+                        <h4 class="accordion-header">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#git">
+                                Git Out Expeditions
+                            </button> 
+                        </h4>
+                        <div id="git" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                            <div class="accordion-body d-none d-sm-block">
+                                <p>Join Git Out Expeditions to explore new horizons with a group of other adventurers!</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="accordion-item">
+                        <h4 class="accordion-header">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#mongo">
+                                Mongo Fly Shop
+                            </button> 
+                        </h4>
+                        <div id="mongo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                            <div class="accordion-body d-none d-sm-block">
+                                <p>Need a new fishing pole, a tacklebox, or flies of all kinds? Stop by Mongo Fly Shop.</p>
+                            </div>
+                        </div>
+                    </div>
+                    
+                    <div class="accordion-item">
+                        <h4 class="accordion-header">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#node">
+                                Node Outdoor Apparel
+                            </button> 
+                        </h4>
+                        <div id="node" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                            <div class="accordion-body d-none d-sm-block">
+                                <p>From polar fleeces to swimsuits, hiking boots to waders, a visit to Node will be sure to get you covered.</p>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+
+                <!-- ##### This is the previous nav tabs for the Community Partners secction. It was latter replaced for the above Collapse and Accordion #####
                 <ul class="nav nav-tabs">
                     <li class="nav-item"><a class="nav-link active" href="#bootstrap" role="tab" data-bs-toggle="tab">Bootstrap Outfitters</a></li>
                     <li class="nav-item"><a class="nav-link" href="#git" role="tab" data-bs-toggle="tab">Git Out Expeditions</a></li>
@@ -129,6 +187,7 @@
                         <p class="d-none d-sm-block">From polar fleeces to swimsuits, hiking boots to waders, a visit to Node will be sure to get you covered.</p>
                     </div>
                 </div>
+                -->
             </div>
         </div>
 
