--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
     <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css" />
 
     <title>Nucamp: A Better Way To Camp</title>
+
+    <form action="https://us-central1-nucamp-production.cloudfunctions.net/post/formdata" method="post">
+
+
 </head>
 
 <body>
@@ -34,13 +38,76 @@
                     <h2>a better way to camp</h2>
                 </div>
                 <div class="col-md-4 col-xl-2 mt-4">
-                    <a href="#reserveForm" role="button" class="btn btn-lg btn-info" data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-html="true" title="Or call us at <br /><strong>1-206-555-1234</strong>">
-                        Reserve Campsite
+                    <a role="button" class="btn btn-lg btn-info" type="button" data-bs-toggle="modal" data-bs-target="#reserveModal">Reserve Campsite
                     </a>
+
+                    <!--  The <a> Button below was used before, with no Modal, so it can have the Tooltip.
+                    A single button can only hold one type of data-bs-toggle, and you will be replacing the data-bs-toggle="tooltip" with one for activating a modal next.
+
+                    <a href="#reserveForm" role="button" class="btn btn-lg btn-info" data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-html="true" title="Or call us at <br /><strong>1-206-555-1234</strong>">Reserve Campsite
+                    </a>
+                    
+                    -->
                 </div>
             </div>
         </div>
 
+        <!-- ##### Modal containing a Reservation Form - Activated by the button "Reserve Campsite" above in this header ##### -->
+        <div class="modal fade" id="reserveModal">
+            <div class="modal-dialog modal-lg">
+                <div class="modal-content">
+                    <div class="modal-header bg-info text-white">
+                        <h3 class="modal-title">Reserve a Campsite</h3>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body bg-white ">
+                        <div class="container-fluid">
+                            <form>
+                                <div class="row mb-3">
+                                    <label class="col-sm-6 form-label text-black">Number of Campers</label>
+                                    <!-- << something strange with this: had to put a text-black class for the lables to show up -->
+                                    <div class="col">
+                                        <select class="form-control" id="numCampers" name="numCampers">
+                                            <option>Select...</option>
+                                            <option>1</option>
+                                            <option>2</option>
+                                            <option>3</option>
+                                            <option>4</option>
+                                            <option>5</option>
+                                            <option>6</option>
+                                        </select>
+                                    </div>
+                                </div>
+                                <div class="row mb-3">
+                                    <label class="col-sm-6 form-label text-black" for="date">Date</label>
+                                    <!-- << something strange with this: had to put a text-black class for the lables to show up -->
+                                    <div class="col-sm-6">
+                                        <input class="form-control" type="date" id="date" name="date" placeholder="dd/mm/yyyy">
+                                    </div>
+                                </div>
+                                <div class="row mb-3">
+                                    <label class="col-sm-6 col-form-label">Campsite Type</label>
+                                    <div class="col-2 btn-group">
+                                        <button for="siteTent" type="button" class="btn btn-success">Tent</button>
+                                        <input type="radio" class="btn-check" name="siteType" id="siteTent" value="tent" autocomplete="off">
+                                        <button for="siteRV" type="button" class="btn btn-primary">RV</button>
+                                        <input type="radio" class="btn-check" name="siteType" id="siteRV" value="RV" autocomplete="off">
+                                    </div>
+                                </div>
+                                <div class="row mb-3">
+                                    <div class="col-sm-2">
+                                        <button class="btn btn-secondary" type="submit" data-bs-dismiss="modal">Cancel</button>
+                                    </div>
+                                    <div class="col-sm-2">
+                                        <button class="btn btn-primary" type="submit">Search</button>
+                                    </div>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </header>
     <nav class="navbar navbar-expand-sm navbar-dark sticky-top">
         <div class="container">
@@ -65,7 +132,7 @@
         </div>
     </nav>
 
-<!-- Modal -->
+    <!-- Modal Activated by the "Login" button in the Navbar -->
     <div class="modal fade" id="loginModal">
         <div class="modal-dialog">
             <div class="modal-content">
@@ -152,6 +219,8 @@
             </div>
         </div>
 
+        <!-- 
+        ##### This Card and Form now are insite the Modal, so I deleted it from here (bottom od the page) #####
         <div class="row row-content align align-items-center">
             <div class="col-sm-9 col-lg-5 mx-auto">
                 <div class="card">
@@ -188,6 +257,7 @@
                 </div>
             </div>
         </div>
+         -->
 
     </div>
     <footer class="site-footer">
@@ -219,10 +289,14 @@
     <!-- Bootstrap JavaScript plugins.-->
     <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
 
+
+    <!-- This JavaScript was inserted to support Tooltips before. Now the "Reserve Campsite" at the top right of the page (inside the header) is activating a Modal, so there is no Tooltips on it anymore. 
+    
     <script>
         const tooltipTriggerList = document.querySelectorAll('[data-bs-toggle="tooltip"]')
         const tooltipList = [...tooltipTriggerList].map(tooltipTriggerEl => new bootstrap.Tooltip(tooltipTriggerEl))    
      </script>
+    -->
 
 </body>
 
