NPM Scripts Part 1

--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
             </div>
         </div>
 
-        <!-- ##### Modal containing a Reservation Form - Activated by the button "Reserve Campsite" above in this header ##### -->
+        <!-- ##### Modal containing a Campsite Reservation Form - Activated by the button "Reserve Campsite" above in this header ##### -->
         <div class="modal fade" id="reserveModal">
             <div class="modal-dialog modal-lg">
                 <div class="modal-content">
-                    <div class="modal-header bg-info text-white">
+                    <div class="modal-header">
                         <h3 class="modal-title">Reserve a Campsite</h3>
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
@@ -132,7 +132,7 @@
         </div>
     </nav>
 
-    <!-- Modal Activated by the "Login" button in the Navbar -->
+    <!-- Modal activated by the "Login" button in the Navbar -->
     <div class="modal fade" id="loginModal">
         <div class="modal-dialog">
             <div class="modal-content">
@@ -256,6 +256,22 @@
                         <p>Bootstrap Outfitters supplies you with gear you need at prices you can't beat.</p>
                     </div>
                 </div>
+            </div>
+        </div>
+
+        <div class="row row-content align-items-start review-section mb-3">
+            <div class="col-sm-4 col-md-3 order-sm-first">
+                <h2 class="text-sm-end">What Are Happy Campers Saying?</h2>
+            </div>
+            <div class="col ms-lg-5">
+                <img class="img-thumbnail img-fluid" src="img/happy-campers.png" alt="Happy campers pointing to a landscape" />
+            </div>
+            <div class="col">
+                <h3>So Worth it!</h3>
+                <p>"We had a blast as we embarked on a wild adventure amidst nature's embrase, where s'mores and laughter under starlit skies became our daily ritual, creating memories thar will last us forever."</p>
+            </div>            
+            <div class="d-flex justify-content-center mt-5">
+                <button class="campsite-btn" data-bs-toggle="modal" data-bs-target="#reserveModal">Reserve a Campsite</button>
             </div>
         </div>
 
